--- a/assets/pages/about-readmore.html
+++ b/assets/pages/about-readmore.html
@@ -27,7 +27,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/main.css">
 
-    <title>Ameria | Azerbaijan</title>
+    <title>Ameria | Read More</title>
 </head>
 
 <body>
@@ -74,14 +74,15 @@
             <div class="row">
                 <div class="text-center other-header">
                     <h1>About us</h1>
-                    <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati fugit animi eveniet unde
+                    <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati fugit animi
+                        eveniet unde
                         libero adipisci expedita esse iusto minima, aliquid exercitationem enim est saepe eos quos
                         perferendis temporibus id, ea, dolore ad veniam facilis. Distinctio et quod atque harum labore
                         cum aliquam dicta expedita corrupti exercitationem est cupiditate modi quisquam officia numquam,
                         laboriosam impedit a iusto possimus? Beatae a voluptatibus, iusto placeat, laboriosam voluptatem
                         tempora eos cupiditate labore, fuga dignissimos ex fugit voluptatum necessitatibus sunt illum.
                         Vel excepturi magnam harum iusto doloribus, dicta in voluptatibus laborum, enim, cum ullam et
-                        error est perspiciatis reprehenderit dolorum obcaecati rerum veritatis. 
+                        error est perspiciatis reprehenderit dolorum obcaecati rerum veritatis.
                         <br><br>
                         Fugit ex eaque veritatis
                         voluptas maxime cumque! Debitis, eligendi minima porro accusamus eos ut repudiandae vel
