--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -27,7 +27,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/main.css">
 
-    <title>Ameria | Azerbaijan</title>
+    <title>Ameria | Contact Us</title>
 </head>
 
 <body>
@@ -98,23 +98,19 @@
                         </div>
                         <div class="socials ps-3 ">
                             <div class="row">
-                                <div
-                                    class="col-3 icon-holder d-flex justify-content-center align-items-center me-2">
+                                <div class="col-3 icon-holder d-flex justify-content-center align-items-center me-2">
                                     <a class="fb d-flex justify-content-center align-items-center"><i
                                             class="bi bi-facebook"></i></a>
                                 </div>
-                                <div
-                                    class="col-3 icon-holder d-flex justify-content-center align-items-center mx-2">
+                                <div class="col-3 icon-holder d-flex justify-content-center align-items-center mx-2">
                                     <a class="ig d-flex justify-content-center align-items-center"><i
                                             class="bi bi-instagram"></i></a>
                                 </div>
-                                <div
-                                    class="col-3 icon-holder d-flex justify-content-center align-items-center mx-2">
+                                <div class="col-3 icon-holder d-flex justify-content-center align-items-center mx-2">
                                     <a class="yt d-flex justify-content-center align-items-center"><i
                                             class="bi bi-linkedin"></i></a>
                                 </div>
-                                <div
-                                    class="col-3 icon-holder d-flex justify-content-center align-items-center ms-2 ">
+                                <div class="col-3 icon-holder d-flex justify-content-center align-items-center ms-2 ">
                                     <a class="tw d-flex justify-content-center align-items-center"><i
                                             class="bi bi-twitter"></i></a>
                                 </div>
