--- a/assets/pages/hikes.html
+++ b/assets/pages/hikes.html
@@ -27,7 +27,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/main.css">
 
-    <title>Ameria | Azerbaijan</title>
+    <title>Ameria | Hikes</title>
 </head>
 
 <body>
