--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -27,7 +27,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/main.css">
 
-    <title>Ameria | Azerbaijan</title>
+    <title>Ameria | About Us</title>
 </head>
 
 <body>
@@ -71,64 +71,65 @@
     <!--  -->
     <section id="about">
         <div class="center-vertical">
-          <div class="about-us-section bf-light">
-            <div class="container">
-              <div class="row">
-                <div class="col-12 col-lg-6 mb-4 mb-lg-0">
-                  <div class="img-head">
-                    <img src="../img/couple-hiking-mountain-climbing-1296x728-header.webp" alt="" />
-                  </div>
+            <div class="about-us-section bf-light">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 col-lg-6 mb-4 mb-lg-0">
+                            <div class="img-head">
+                                <img src="../img/couple-hiking-mountain-climbing-1296x728-header.webp" alt="" />
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <h2 class="text-head">KNOW MORE ABOUT US</h2>
+                            <div class="break-small mb-2"></div>
+                            <p class="text-para">
+                                AMERIA is hiking tour that immerse you in the Azerbaijan's
+                                mountain landscapes. You can expect to be physically active on
+                                each day of our trips so they’re perfect for any physically fit
+                                person who delights in the challenge of a mountain trail. After
+                                more than two decades of leading trips in the mountains, we know
+                                that magic happens on the trail. Together we build splendid
+                                memories that last a lifetime, memories that continue to inspire
+                                and rejuvenate long after the actual experience of travel is
+                                over. This year, please consider joining us in the mountains.
+                                Our trips may not be for everyone, but we hope they’re right for
+                                you! Ready to hike? We’d love the pleasure of your company! This
+                                year, please consider joining us in the mountains. Our trips may
+                                not be for everyone, but we hope they’re right for you! Ready to
+                                hike? We’d love the pleasure of your company!
+                            </p>
+                            <div class="row">
+                                <div class="col-4 col-md-4 mb-2 mb-md-0">
+                                    <div class="box">
+                                        <i class="bi bi-person"></i>
+                                        <h4 class="mb-0">Total clients</h4>
+                                        <p class="mb-0">1560</p>
+                                    </div>
+                                </div>
+                                <div class="col-4 col-md-4 mb-2 mb-md-0">
+                                    <div class="box">
+                                        <i class="bi bi-calendar"></i>
+                                        <h4 class="mb-0">Working years</h4>
+                                        <p class="mb-0">18</p>
+                                    </div>
+                                </div>
+                                <div class="col-4 col-md-4 mb-2 mb-md-0">
+                                    <div class="box">
+                                        <i class="bi bi-award-fill"></i>
+                                        <h4 class="mb-0"> Our employees</h4>
+                                        <p class="mb-0">105</p>
+
+                                    </div>
+                                    <a type="button" class="btn btn-outline-success my-3 mx-3 my-button"
+                                        href="./about-readmore.html">Read more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12 col-lg-6">
-                  <h2 class="text-head">KNOW MORE ABOUT US</h2>
-                  <div class="break-small mb-2"></div>
-                  <p class="text-para">
-                    AMERIA is hiking tour that immerse you in the Azerbaijan's
-                    mountain landscapes. You can expect to be physically active on
-                    each day of our trips so they’re perfect for any physically fit
-                    person who delights in the challenge of a mountain trail. After
-                    more than two decades of leading trips in the mountains, we know
-                    that magic happens on the trail. Together we build splendid
-                    memories that last a lifetime, memories that continue to inspire
-                    and rejuvenate long after the actual experience of travel is
-                    over. This year, please consider joining us in the mountains.
-                    Our trips may not be for everyone, but we hope they’re right for
-                    you! Ready to hike? We’d love the pleasure of your company! This
-                    year, please consider joining us in the mountains. Our trips may
-                    not be for everyone, but we hope they’re right for you! Ready to
-                    hike? We’d love the pleasure of your company!
-                  </p>
-                  <div class="row">
-                    <div class="col-4 col-md-4 mb-2 mb-md-0">
-                      <div class="box">
-                        <i class="bi bi-person"></i>
-                        <h4 class="mb-0">Total clients</h4>
-                        <p class="mb-0">1560</p>
-                      </div>
-                    </div>
-                    <div class="col-4 col-md-4 mb-2 mb-md-0">
-                      <div class="box">
-                        <i class="bi bi-calendar"></i>
-                        <h4 class="mb-0">Working years</h4>
-                        <p class="mb-0">18</p>
-                      </div>
-                    </div>
-                    <div class="col-4 col-md-4 mb-2 mb-md-0">
-                      <div class="box">
-                        <i class="bi bi-award-fill"></i>
-                        <h4 class="mb-0"> Our employees</h4>
-                        <p class="mb-0">105</p>
-  
-                      </div>
-                      <a type="button" class="btn btn-outline-success my-3 mx-3 my-button" href="./about-readmore.html">Read more</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
             </div>
-          </div>
         </div>
-      </section>
+    </section>
 
     <!-- FOOTER -->
     <footer>
