--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./assets/pages/about.html">About</a></li>
                             <li><a href="./assets/pages/contact.html">Contact</a></li>
-                            <li><a href="./assets/pages/hikes.html">Events</a></li>
+                            <li><a href="./assets/pages/hikes.html">Hikes</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -69,7 +69,113 @@
         </div>
     </section>
 
-    
+    <main>
+        <section id="slider">
+            <div class="slideshow-container">
+
+                <!-- Full-width images with number and caption text -->
+                <div class="mySlides fadee w-100">
+
+                    <div class="row gx-0 justify-content-center">
+                        <div class="col-2 img-holder side">
+                            <img src="./assets/img/photo-1614005121409-047119b17f10.avif" alt="" class="slide-img-side">
+                        </div>
+                        <div class="col-2 img-holder img-holder-main">
+                            <img src="./assets/img/photo-1608570004513-472c257f2149.jpg" alt="" class="slide-img">
+                        </div>
+                        <div class="col-5 d-flex align-items-center px-5">
+                            <span class="quotes">“”</span>
+                            <p>
+                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Amet minim
+                                mollit non
+                                deserunt ullamco est sit aliqua dolor do amet sint.Amet minim mollit non deserunt
+                                ullamco est
+                                sit aliqua dolor do amet sint.Amet minim mollit non deserunt ullamco est sit aliqua
+                                dolor do
+                                amet sint.
+                                <br>
+                                <span class="hiker-name">Jennifer</span>
+                            </p>
+
+                        </div>
+                        <div class="col-2 img-holder side">
+                            <img src="./assets/img/photo-1616439273698-3e9a2545cec8.avif" alt="" class="slide-img-side">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="mySlides fadee">
+
+                    <div class="row gx-0 justify-content-center">
+                        <div class="col-2 img-holder side">
+                            <img src="./assets/img/photo-1608570004513-472c257f2149.jpg" alt="" class="slide-img-side">
+                        </div>
+                        <div class="col-2 img-holder">
+                            <img src="./assets/img/photo-1616439273698-3e9a2545cec8.avif" alt="" class="slide-img">
+                        </div>
+                        <div class="col-5 d-flex align-items-center px-5">
+                            <span class="quotes">“”</span>
+                            <p>
+                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Amet minim
+                                mollit non
+                                deserunt ullamco est sit aliqua dolor do amet sint.Amet minim mollit non deserunt
+                                ullamco est
+                                sit aliqua dolor do amet sint.Amet minim mollit non deserunt ullamco est sit aliqua
+                                dolor do
+                                amet sint.
+                                <br>
+                                <span class="hiker-name">Carlos</span>
+                            </p>
+                        </div>
+                        <div class="col-2 img-holder side">
+                            <img src="./assets/img/photo-1614005121409-047119b17f10.avif" alt="" class="slide-img-side">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="mySlides fadee">
+
+                    <div class="row gx-0 justify-content-center">
+                        <div class="col-2 img-holder side">
+                            <img src="./assets/img/photo-1616439273698-3e9a2545cec8.avif" alt="" class="slide-img-side">
+                        </div>
+                        <div class="col-2 img-holder">
+                            <img src="./assets/img/photo-1614005121409-047119b17f10.avif" alt="" class="slide-img">
+                        </div>
+                        <div class="col-5 d-flex align-items-center px-5">
+                            <span class="quotes">“”</span>
+                            <p>
+                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Amet minim
+                                mollit non
+                                deserunt ullamco est sit aliqua dolor do amet sint.Amet minim mollit non deserunt
+                                ullamco est
+                                sit aliqua dolor do amet sint.Amet minim mollit non deserunt ullamco est sit aliqua
+                                dolor do
+                                amet sint.
+                                <br>
+                                <span class="hiker-name">Ricardo</span>
+                            </p>
+                        </div>
+                        <div class="col-2 img-holder side">
+                            <img src="./assets/img/photo-1608570004513-472c257f2149.jpg" alt="" class="slide-img-side">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Next and previous buttons -->
+                <a class="previ" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="nexti" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br>
+
+            <!-- The dots/circles -->
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
+        </section>
+    </main>
 
     <!-- FOOTER -->
     <footer>
@@ -140,7 +246,7 @@
                                 Copyright 2022 by Refsnes Data. All Rights Reserved.
                             </span>
                         </div>
-                        <img class="footer-logo" src="../img/Logo.png">
+                        <img class="footer-logo" src="./assets/img/Logo.png">
                     </div>
                 </div>
             </div>
@@ -150,6 +256,7 @@
     <!-- js -->
     <script src="./assets/js/script.js"></script>
     <script src="./assets/js/header.js"></script>
+    <script src="./assets/js/slider.js"></script>
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
