--- a/index.html
+++ b/index.html
@@ -78,28 +78,24 @@
                 <div class="mySlides fadee w-100">
 
                     <div class="row gx-0 justify-content-center">
-                        <div class="col-2 img-holder side">
+                        <div class="col-md-2 img-holder side">
                             <img src="./assets/img/photo-1614005121409-047119b17f10.avif" alt="" class="slide-img-side">
                         </div>
-                        <div class="col-2 img-holder img-holder-main">
+                        <div class="col-md-2 col-12 img-holder img-holder-main">
                             <img src="./assets/img/photo-1608570004513-472c257f2149.jpg" alt="" class="slide-img">
                         </div>
-                        <div class="col-5 d-flex align-items-center px-5">
-                            <span class="quotes">“”</span>
+                        <div class="col-md-5 col-12 d-flex flex-column align-items-center px-3">
+                            <span class="quotes d-flex flex-column align-self-start mb-4">“”</span>
                             <p>
-                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Amet minim
-                                mollit non
-                                deserunt ullamco est sit aliqua dolor do amet sint.Amet minim mollit non deserunt
-                                ullamco est
-                                sit aliqua dolor do amet sint.Amet minim mollit non deserunt ullamco est sit aliqua
-                                dolor do
-                                amet sint.
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos odit amet quaerat nihil
+                                inventore, vitae fuga numquam facilis deleniti facere. Lorem ipsum dolor sit amet
+                                consectetur, adipisicing elit. Dolorum commodi explicabo, tempore et.
                                 <br>
-                                <span class="hiker-name">Jennifer</span>
+                                <span class="hiker-name d-block mt-3">Fatima</span>
                             </p>
 
                         </div>
-                        <div class="col-2 img-holder side">
+                        <div class="col-md-2 img-holder side">
                             <img src="./assets/img/photo-1616439273698-3e9a2545cec8.avif" alt="" class="slide-img-side">
                         </div>
                     </div>
@@ -108,27 +104,24 @@
                 <div class="mySlides fadee">
 
                     <div class="row gx-0 justify-content-center">
-                        <div class="col-2 img-holder side">
+                        <div class="col-md-2 img-holder side">
                             <img src="./assets/img/photo-1608570004513-472c257f2149.jpg" alt="" class="slide-img-side">
                         </div>
-                        <div class="col-2 img-holder">
+                        <div class="col-md-2 col-12 img-holder">
                             <img src="./assets/img/photo-1616439273698-3e9a2545cec8.avif" alt="" class="slide-img">
                         </div>
-                        <div class="col-5 d-flex align-items-center px-5">
-                            <span class="quotes">“”</span>
+                        <div class="col-md-5 col-12 d-flex flex-column align-items-center px-5">
+                            <span class="quotes d-flex flex-column align-self-start mb-4">“”</span>
                             <p>
-                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Amet minim
-                                mollit non
-                                deserunt ullamco est sit aliqua dolor do amet sint.Amet minim mollit non deserunt
-                                ullamco est
-                                sit aliqua dolor do amet sint.Amet minim mollit non deserunt ullamco est sit aliqua
-                                dolor do
-                                amet sint.
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos odit amet quaerat nihil
+                                inventore, vitae fuga numquam facilis deleniti facere. Lorem ipsum dolor sit amet
+                                consectetur, adipisicing elit. Dolorum commodi explicabo, tempore et.
                                 <br>
-                                <span class="hiker-name">Carlos</span>
+                                <span class="hiker-name d-block mt-3">Alemdar</span>
                             </p>
+
                         </div>
-                        <div class="col-2 img-holder side">
+                        <div class="col-md-2 img-holder side">
                             <img src="./assets/img/photo-1614005121409-047119b17f10.avif" alt="" class="slide-img-side">
                         </div>
                     </div>
@@ -137,27 +130,24 @@
                 <div class="mySlides fadee">
 
                     <div class="row gx-0 justify-content-center">
-                        <div class="col-2 img-holder side">
+                        <div class="col-md-2 img-holder side">
                             <img src="./assets/img/photo-1616439273698-3e9a2545cec8.avif" alt="" class="slide-img-side">
                         </div>
-                        <div class="col-2 img-holder">
+                        <div class="col-md-2 col-12 col-sm-6 img-holder">
                             <img src="./assets/img/photo-1614005121409-047119b17f10.avif" alt="" class="slide-img">
                         </div>
-                        <div class="col-5 d-flex align-items-center px-5">
-                            <span class="quotes">“”</span>
+                        <div class="col-md-5 col-12 d-flex flex-column align-items-center px-5">
+                            <span class="quotes d-flex flex-column align-self-start mb-4">“”</span>
                             <p>
-                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Amet minim
-                                mollit non
-                                deserunt ullamco est sit aliqua dolor do amet sint.Amet minim mollit non deserunt
-                                ullamco est
-                                sit aliqua dolor do amet sint.Amet minim mollit non deserunt ullamco est sit aliqua
-                                dolor do
-                                amet sint.
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos odit amet quaerat nihil
+                                inventore, vitae fuga numquam facilis deleniti facere. Lorem ipsum dolor sit amet
+                                consectetur, adipisicing elit. Dolorum commodi explicabo, tempore et.
                                 <br>
-                                <span class="hiker-name">Ricardo</span>
+                                <span class="hiker-name d-block mt-3">Elvin</span>
                             </p>
+
                         </div>
-                        <div class="col-2 img-holder side">
+                        <div class="col-md-2 img-holder side">
                             <img src="./assets/img/photo-1608570004513-472c257f2149.jpg" alt="" class="slide-img-side">
                         </div>
                     </div>
